--- a/projects/bootstrapcarouselmaker.html
+++ b/projects/bootstrapcarouselmaker.html
@@ -1,39 +1,86 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>Bootstrap Carousel Generator</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <style>
+        body {
+            background-color: #dadada;
+        }
+
+        h1 {
+            text-align: center;
+            font-family: IBM Plex Mono, monospace;
+            font-size: 240%;
+            margin-bottom: 0;
+            color: white;
+            background-color: #8783f7;
+            vertical-align: bottom;
+        }
+
+        a {
+            text-align: center;
+        }
+
+        label, strong {
+            font-family: IBM Plex Mono, monospace;
+        }
+
         textarea {
-            border-radius: 12px;
+            object-fit: fill;
+            border: #4f4f4f solid;
+            border-width: 0 0 2px 0;
+            background-color: #e1e1e1;
+            min-height: 22vh;
         }
 
         input {
-            border-radius: 3px;
-            border-width: 1px;
+            border-radius: 0;
+            border-width: 2px 0 0 0;
+            background-color: #e1e1e1;
+            border-color: #4f4f4f;
         }
-        .adjustment {
-            margin-right: 2vh;
+
+        #carouselName {
+            border-width: 2px 0 0 2px;
         }
-        .button {
-            border-width: 1px;
-            border-radius: 3px;
+        a >span:hover {
+            text-decoration: underline black;
+        }
+        button {
+            padding: 0;
+            border: solid #4f4f4f;
+            border-width: 2px 0 0 2px;
+            background-color: #efefef;
+        }
+
+        button > span {
+            margin-top: 10%;
         }
     </style>
 </head>
 <body>
-
-<div class="container p-5">
-    <div class="row align-items-center justify-content-center">
-        <h1 style="text-align:center;">Bootstrap carousel generator</h1>
-        <div class="col-sm-12 col-md-10">
-            <div class="row">
-                <textarea class="my-2" placeholder="File names" id="namesIn" rows="10"></textarea>
+<div class="container pt-5">
+    <div class="row mt-5 p-0 align-items-center justify-content-center">
+        <div style="border: 2px solid #4f4f4f" class="col-xl-8 col-md-12 col-lg-10 row p-0 shadow-lg">
+            <div class="group row p-0 m-0">
+                <h1 class="col-10 p-0">Bootstrap Carousel Generator</h1>
+                <a style="background-color: #8278f2;" class="col-2 p-0 m-0"
+                   href="https://yumns.github.io#prj">
+                    <span style="font-size: 4vh; color:black; background-color: #8278f2;" class="m-0 p-0 material-icons-sharp">close</span></a>
             </div>
-            <form id="form" action="generate.js" target="_blank" method="post" autocomplete="off">
-                <div class="row">
+            <div class="row p-0 m-0">
+                <textarea placeholder="File names" id="namesIn"></textarea>
+            </div>
+            <form id="form" autocomplete="off">
+                <div class="row mt-2">
                     <div class="col-sm-12 col-md-3">
                         <strong>Transition</strong>
                         <div class="d-block">
@@ -94,29 +141,39 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12">
-                        <div class="row">
-                            <div class="col-9 row adjustment">
-                                <input name="filepath" type="text" id="filepath" placeholder="Picture folder">
+                    <div class="row p-0 m-0">
+                        <div class="col-7 row p-0 m-0">
+                            <input name="filepath" type="text" id="filepath" placeholder="Picture folder">
+                        </div>
+                        <div class="col-3 row p-0 m-0">
+                            <input name="carouselName" type="text" id="carouselName" placeholder="Carousel name">
+                        </div>
+                        <div class="col-2 row m-0 p-0">
+                            <div class="row col-4 m-0 p-0">
+                                <button class="p-0" type="submit"><span
+                                        class="material-icons-sharp">keyboard_return</span></button>
                             </div>
-                            <div class="col-3 row">
-                                <input name="carouselName" type="text" id="carouselName" placeholder="Carousel name">
+                            <div class="row col-4 m-0 p-0">
+                                <button class="p-0" type="button" class="button" onclick="copyText()"><span
+                                        class="material-icons-sharp">content_copy</span></button>
+                            </div>
+                            <div class="row col-4 m-0 p-0">
+                                <button class="p-0" type="reset" onclick="resetTextArea()"><span
+                                        class="material-icons-sharp">refresh</span></button>
                             </div>
                         </div>
                     </div>
                 </div>
-                <input class="mt-2" type="submit">
-                <button type="button" class="button" onclick="copyText()">Copy</button>
-                <input type="reset">
             </form>
         </div>
-
-        <pre id="log"></pre>
     </div>
 </div>
-</div>
-
+<pre id="log" style="opacity: 0%"></pre>
 <script>
+    function resetTextArea() {
+        document.getElementById("namesIn").value = ""
+    }
+
     const form = document.getElementById("form");
     const log = document.getElementById("log");
 
@@ -213,12 +270,8 @@
 
 </script>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 </body>
 </html>
-
-
-
-
