--- a/projects/tasQer/index.html
+++ b/projects/tasQer/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
 </head>
-<body onload="displayTasks()">
+<body onload="displayTasks(), enterListener()">
 
 <div class="row align-items-center justify-content-center pt-5 mt-5">
     <div class="container col-lg-8 col-md-10 col-sm-12 p-0">
